📑 change fixed gap to relative

--- a/src/components/layout/DashboardTabs/DashboardTabs.module.scss
+++ b/src/components/layout/DashboardTabs/DashboardTabs.module.scss
@@ -7,7 +7,7 @@ article.tabs {
 
     & > section {
       display: flex !important;
-      gap: var(--p-level-4) !important;
+      gap: .8em !important;
     }
   }
 }
